--- a/app.yaml
+++ b/app.yaml
@@ -10,8 +10,4 @@ handlers:
   upload: favicon\.ico
 
 - url: .*
-  script: main.app
-
-libraries:
-- name: webapp2
-  version: "2.5.1"
+  script: helloworld.app
