--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: python
 python:
   - "2.7"
+before_script:
+- wget http://googleappengine.googlecode.com/files/google_appengine_1.7.4.zip -nv
+- unzip -q google_appengine_1.7.4.zip
