--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: python
 python:
   - "2.7"
 before_script:
-- wget http://googleappengine.googlecode.com/files/google_appengine_1.7.4.zip -nv
-- unzip -q google_appengine_1.7.4.zip
+  - wget http://googleappengine.googlecode.com/files/google_appengine_1.7.4.zip -nv
+  - unzip -q google_appengine_1.7.4.zip
+script:
+  - ./google_appengine/dev_appserver.py .
