--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 before_script:
   - wget http://googleappengine.googlecode.com/files/google_appengine_1.7.4.zip -nv
   - unzip -q google_appengine_1.7.4.zip
+  - PATH=$PATH:`pwd`/google_appengine
 
 install:
   - sudo apt-get -y install nodejs
