--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ python:
 before_script:
   - wget http://googleappengine.googlecode.com/files/google_appengine_1.7.4.zip -nv
   - unzip -q google_appengine_1.7.4.zip
-  - PATH=$PATH:`pwd`/google_appengine
+  - GOOGLE_APP_ENGINE=`pwd`/google_appengine
+  - PYRTHONPATH=$GOOGLE_APP_ENGINE
+  - PYTHONPATH=$PYTHONPATH:$GOOGLE_APP_ENGINE/lib/
 
 install:
   - sudo apt-get -y install nodejs
 
 script:
-  - "echo Nothing to test yet..."
+  - nosetests
