--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,15 @@ language: python
 python:
   - "2.7"
 
-before_script:
+install:
   - wget http://googleappengine.googlecode.com/files/google_appengine_1.7.4.zip -nv
   - unzip -q google_appengine_1.7.4.zip
   - GOOGLE_APP_ENGINE=`pwd`/google_appengine
-  - PYRTHONPATH=$GOOGLE_APP_ENGINE
-  - PYTHONPATH=$PYTHONPATH:$GOOGLE_APP_ENGINE/lib/
-  - PYTHONPATH=$PYTHONPATH:$GOOGLE_APP_ENGINE/lib/webob_0_9
-  - PYTHONPATH=$PYTHONPATH:$GOOGLE_APP_ENGINE/lib/webapp2
-
-install:
-  - sudo apt-get -y install nodejs
+  - echo $GOOGLE_APP_ENGINE
+  - export PYRTHONPATH=$GOOGLE_APP_ENGINE
+  - export PYTHONPATH=$PYTHONPATH:$GOOGLE_APP_ENGINE/lib/
+  - export PYTHONPATH=$PYTHONPATH:$GOOGLE_APP_ENGINE/lib/webob_0_9
+  - export PYTHONPATH=$PYTHONPATH:$GOOGLE_APP_ENGINE/lib/webapp2
 
 script:
   - nosetests
