--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
   - unzip -q google_appengine_1.7.4.zip
   - GOOGLE_APP_ENGINE=`pwd`/google_appengine
   - echo $GOOGLE_APP_ENGINE
-  - export PYRTHONPATH=$GOOGLE_APP_ENGINE
+  - ls
+  - export PYTHONPATH=$GOOGLE_APP_ENGINE
   - export PYTHONPATH=$PYTHONPATH:$GOOGLE_APP_ENGINE/lib/
   - export PYTHONPATH=$PYTHONPATH:$GOOGLE_APP_ENGINE/lib/webob_0_9
   - export PYTHONPATH=$PYTHONPATH:$GOOGLE_APP_ENGINE/lib/webapp2
