updated package.json to fit nodejitsu

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
     "name": "ayrtonaraujo.net"
+  , "subdomain": "ayr-www"
+  , "domains": [
+    "www.ayrtonaraujo.net"
+  ]
   , "version": "0.4.1"
   , "milestone" : "Alpha"
   , "private": true
@@ -21,8 +25,10 @@
     , "jade": ">= 0.0.1"
   }
   , "engines": {
-    "node": "0.8.x",
-    "npm": "1.1.x"
+    "node": "0.8.x"
+  }
+  , "scripts": {
+    "start": "app.js"
   }
   , "licenses": [ {
     "type": "MIT",
