--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-    "name": "ayrtonaraujo.net"
-  , "subdomain": "ayr-www"
-  , "domains": [
-    "www.ayrtonaraujo.net"
-  ]
-  , "version": "0.4.1"
-  , "milestone" : "Alpha"
-  , "private": true
-  , "author": { "name": "Ayrton Araújo", "email": "root@ayrtonaraujo.net", "url": "http://ayrtonaraujo.net/" }
-  , "repository": {
-    "type": "git",
-    "url": "git://github.com/ayr-ton/ayrtonaraujo.net.git"
-  }
-  , "bugs": {
-    "url": "https://github.com/ayr-ton/ayrtonaraujo.net/issues"
-  }
-  , "assets": {
-    "libs": "0001"
-   ,"app": "0004"
-  }
-  , "dependencies": {
-      "express": "2.5.8"
-    , "stylus": ">= 0.0.1"
-    , "jade": ">= 0.0.1"
-  }
-  , "engines": {
-    "node": "0.8.x"
-  }
-  , "scripts": {
-    "start": "app.js"
-  }
-  , "licenses": [ {
-    "type": "MIT",
-    "url": "http://www.opensource.org/licenses/MIT" 
-  } ]
+    "name": "ayrtonaraujo.net",
+    "subdomain": "ayr-www",
+    "domains": [
+        "www.ayrtonaraujo.net"
+    ],
+    "version": "0.4.1",
+    "milestone": "Alpha",
+    "private": true,
+    "author": {
+        "name": "Ayrton Araújo",
+        "email": "root@ayrtonaraujo.net",
+        "url": "http://ayrtonaraujo.net/"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/ayr-ton/ayrtonaraujo.net.git"
+    },
+    "bugs": {
+        "url": "https://github.com/ayr-ton/ayrtonaraujo.net/issues"
+    },
+    "dependencies": {
+        "express": "2.5.8",
+        "stylus": ">= 0.0.1",
+        "jade": ">= 0.0.1"
+    },
+    "engines": {
+        "node": "0.8.x"
+    },
+    "scripts": {
+        "start": "app.js"
+    },
+    "licenses": [
+        {
+            "type": "MIT",
+            "url": "http://www.opensource.org/licenses/MIT"
+        }
+    ]
 }
