--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "domains": [
         "www.ayrtonaraujo.net"
     ],
-    "version": "0.4.1",
+    "version": "0.4.1-1",
     "milestone": "Alpha",
     "private": true,
     "author": {
