--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "domains": [
         "www.ayrtonaraujo.net"
     ],
-    "version": "0.4.1-1",
+    "version": "0.4.1-3",
     "milestone": "Alpha",
     "private": true,
     "author": {
@@ -22,7 +22,8 @@
     "dependencies": {
         "express": "2.5.8",
         "stylus": ">= 0.0.1",
-        "jade": ">= 0.0.1"
+        "jade": ">= 0.0.1",
+        "node-minify": ">= 0.7.2"
     },
     "engines": {
         "node": "0.8.x"
